<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstFragment">
    <!--android:importantForAccessibility="yes" or "no"
        set this property to see the difference
        -->
    <ImageView
        android:id="@+id/android_logo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/android_logo"
        android:importantForAccessibility="yes"
        android:contentDescription="@string/logo_describtion"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textview_first"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        android:text="@string/hello_first_fragment"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/android_logo" />

    <TextView
        android:id="@+id/textview_paragraph"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        android:text="@string/text_paragraph"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_first" />

    <!--android:focusable="false"
    set this property to see the difference
    -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        android:focusable="true"
        android:id="@+id/groupcontainer"
        app:layout_constraintTop_toBottomOf="@id/textview_paragraph">

        <TextView
            android:id="@+id/firstlabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/firstlabel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!--android:focusable="false" or "true"
            set this property to see the difference in firstValue and firstLabel
            -->
        <TextView
            android:id="@+id/firstvalue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/firstvalue"
            android:importantForAccessibility="no"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/secondlabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/secondlabel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/firstlabel" />

        <TextView
            android:id="@+id/secondvalue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/secondvalue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/firstvalue" />

        <TextView
            android:id="@+id/thirdlabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/thirdlabel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/secondlabel" />

        <TextView
            android:id="@+id/thirdvalue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/thirdvalue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/secondvalue" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/button_first"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:layout_marginTop="@dimen/fab_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/groupcontainer" />
</androidx.constraintlayout.widget.ConstraintLayout>